src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountNature__c</fullName>
        <label>客户性质</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>公立医院</fullName>
                </value>
                <value>
                    <fullName>单体民营</fullName>
                </value>
                <value>
                    <fullName>集团客户</fullName>
                </value>
                <value>
                    <fullName>个案代理商</fullName>
                </value>
                <value>
                    <fullName>区域签约代理商</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>客户类别</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AccountNature__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>公立综合</fullName>
                </value>
                <value>
                    <fullName>公立眼科专科</fullName>
                </value>
                <value>
                    <fullName>民营综合</fullName>
                </value>
                <value>
                    <fullName>民营眼科专科</fullName>
                </value>
                <value>
                    <fullName>集团综合</fullName>
                </value>
                <value>
                    <fullName>集团眼科专科</fullName>
                </value>
                <value>
                    <fullName>公立其他</fullName>
                </value>
                <value>
                    <fullName>集团其他</fullName>
                </value>
                <value>
                    <fullName>民营其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>所属组织</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>北京高视远望科技有限公司</fullName>
                </value>
                <value>
                    <fullName>上海医学明望科技有限公i是</fullName>
                </value>
                <value>
                    <fullName>天津高视晶品医疗技术有限公司</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigCustomer__c</fullName>
        <inlineHelpText>200万以上的客户是大项目客户。</inlineHelpText>
        <label>大项目客户</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessDistrict__c</fullName>
        <label>经营辖区</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLicense__c</fullName>
        <label>营业执照复印件（加盖公章）</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BusinessModel__c</fullName>
        <label>经营模式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessScope__c</fullName>
        <label>许可证经营范围</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CGxsjh__c</fullName>
        <formula>IF(RegularOpportunities__c=&quot;有常规销售机会&quot;, &quot;有常规销售机会&quot;, &quot;无常规销售机会&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>有无常规销售机会</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMCodingFormula__c</fullName>
        <formula>&apos;SF&apos; + (CRMCoding__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>客户编码</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMCoding__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>原客户编码</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Classify__c</fullName>
        <label>客户基本分类</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>内部客户</fullName>
                </value>
                <value>
                    <fullName>外部客户</fullName>
                    <default>true</default>
                    <label>外部客户</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>企业名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <label>联系人姓名</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactNumber__c</fullName>
        <label>联系电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CooperativeDealer__c</fullName>
        <label>已合作经销商</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyHospital__c</fullName>
        <label>县级医院</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cunty__c</fullName>
        <inlineHelpText>例如：北京市延庆县，此字段填：延庆县</inlineHelpText>
        <label>县/县级市</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerApprovalStatus__c</fullName>
        <label>客户审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>待审批</fullName>
                </value>
                <value>
                    <fullName>已审批</fullName>
                </value>
                <value>
                    <fullName>已拒绝</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerAssetDifferentiation__c</fullName>
        <label>客户资产区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAssets__c</fullName>
        <formula>IF(CustomerAssetDifferentiation__c=&quot;有客户资产&quot;, &quot;有屈光客户资产&quot;, &quot;无屈光客户资产&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>有无屈光客户资产</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerFirst__c</fullName>
        <label>客户是否首营</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                    <default>true</default>
                    <label>否</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DQjlgz__c</fullName>
        <defaultValue>false</defaultValue>
        <label>常规大区经理关注客户</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DepartmentDirectorMajor__c</fullName>
        <label>科室主任专业</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartmentZC__c</fullName>
        <formula>CASE (  province__c  , 
&quot;黑龙江省&quot; , &quot;沈阳技术服务中心&quot;, 
&quot;吉林省&quot; , &quot;沈阳技术服务中心&quot;,
&quot;辽宁省&quot; ,  &quot;沈阳技术服务中心&quot;, 
&quot;北京市&quot;  , &quot;北京技术服务中心&quot; ,
&quot;天津市&quot;  , &quot;北京技术服务中心&quot; ,
&quot;河北省&quot;  , &quot;北京技术服务中心&quot; ,
&quot;内蒙古自治区 &quot; , &quot;北京技术服务中心&quot; ,
&quot; 山东省&quot; , &quot;济南技术服务中心&quot;,
&quot;河南省 &quot;  , &quot;济南技术服务中心&quot;,
&quot;上海市&quot;  , &quot;上海技术服务中心&quot;,
&quot;安徽省&quot; , &quot;上海技术服务中心&quot;,
&quot;江苏省&quot; , &quot;上海技术服务中心&quot;,
&quot;江西省&quot; , &quot;上海技术服务中心&quot;,
&quot;浙江省&quot; ,  &quot;上海技术服务中心&quot;, 
&quot;广东省&quot; , &quot;广州技术服务中心&quot;,
&quot;福建省&quot; , &quot;广州技术服务中心&quot;,
&quot;湖南省&quot; , &quot;广州技术服务中心&quot;,
&quot;湖北省&quot; , &quot;广州技术服务中心&quot;,
&quot;海南省&quot; , &quot;广州技术服务中心&quot;,
&quot;广西壮族自治区&quot; , &quot;广州技术服务中心&quot;,
&quot;重庆市&quot; , &quot;重庆技术服务中心&quot;,
&quot;四川省&quot; , &quot;重庆技术服务中心&quot;,
&quot;云南省&quot; , &quot;重庆技术服务中心&quot;,
&quot;贵州省&quot; , &quot;重庆技术服务中心&quot;,
&quot;西藏自治区&quot; , &quot;重庆技术服务中心&quot;,
&quot;山西省&quot; , &quot;西安技术服务中心&quot;,
&quot;陕西省&quot; , &quot;西安技术服务中心&quot;,
&quot;甘肃省&quot; , &quot;西安技术服务中心&quot;,
&quot;青海省&quot; , &quot;西安技术服务中心&quot;,
&quot;宁夏回族自治区&quot; , &quot;西安技术服务中心&quot;,
&quot;新疆维吾尔自治区&quot; , &quot;西安技术服务中心&quot;,
&quot;香港&quot; , &quot;香港技术服务中心&quot;,
&quot;澳门&quot;, &quot;香港技术服务中心&quot;,
&quot;澳门特别行政区&quot;, &quot;香港技术服务中心&quot;,
&quot;香港特别行政区&quot; , &quot;香港技术服务中心&quot;, Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>部门（客户资产用）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duty__c</fullName>
        <label>职务</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVPdx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>大型EVP关注客户</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcimerOpportunity__c</fullName>
        <label>准分子销售机会区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>设备类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>准分子</fullName>
                </value>
                <value>
                    <fullName>飞白</fullName>
                </value>
                <value>
                    <fullName>路视</fullName>
                </value>
                <value>
                    <fullName>欧堡</fullName>
                </value>
                <value>
                    <fullName>准分子+欧堡</fullName>
                </value>
                <value>
                    <fullName>准分子+路视</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>客户三级分类</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>secondclassify__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>上市公司</fullName>
                </value>
                <value>
                    <fullName>合伙公司</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldVisitQualified__c</fullName>
        <label>实地考察合格</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FoundingTime__c</fullName>
        <label>成立时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>性别</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>男</fullName>
                </value>
                <value>
                    <fullName>女</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>客户性质等级</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AccountNature__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>公立三级</fullName>
                </value>
                <value>
                    <fullName>公立二级</fullName>
                </value>
                <value>
                    <fullName>公立一级</fullName>
                </value>
                <value>
                    <fullName>爱尔集团</fullName>
                </value>
                <value>
                    <fullName>朝聚集团</fullName>
                </value>
                <value>
                    <fullName>华厦集团</fullName>
                </value>
                <value>
                    <fullName>华正集团</fullName>
                </value>
                <value>
                    <fullName>新视界集团</fullName>
                </value>
                <value>
                    <fullName>单体民营</fullName>
                </value>
                <value>
                    <fullName>阿玛施集团</fullName>
                </value>
                <value>
                    <fullName>普瑞集团</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdCard__c</fullName>
        <label>被授权人身份证复印件</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IdNumber__c</fullName>
        <label>证件号</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceTitle__c</fullName>
        <label>发票抬头</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KOL__c</fullName>
        <label>KOL客户</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegalRepresentative__c</fullName>
        <label>法定代表人</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseType__c</fullName>
        <label>许可证类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>器械生产许可证</fullName>
                </value>
                <value>
                    <fullName>器械生产备案证</fullName>
                </value>
                <value>
                    <fullName>三类器械经营许可证</fullName>
                </value>
                <value>
                    <fullName>二类器械备案证</fullName>
                </value>
                <value>
                    <fullName>其它</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MajorDealers__c</fullName>
        <label>主要经销商</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MajorExpansionArea__c</fullName>
        <label>主要展开领域</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedicalInstruments__c</fullName>
        <label>医疗器械生产许可证（生产企业）复印件（加盖公章）</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NCCoding__c</fullName>
        <label>原CRM客户编码</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewAccount__c</fullName>
        <label>新建医院</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OBQYJL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>欧堡区域经理关注客户</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OBZJ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>欧堡总监关注客户</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OBdqjl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>欧堡大区经理关注客户</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OfficesDirector__c</fullName>
        <label>科室主任</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptosOpportunity__c</fullName>
        <formula>IF(SalesOpportunityDifferentiation__c=&quot;有欧堡销售机会&quot;, &quot;有欧堡销售机会&quot;, &quot;无欧堡销售机会&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>有无欧堡销售机会</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutpatientsSum__c</fullName>
        <label>眼科年门诊量（例）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PZgz__c</fullName>
        <defaultValue>false</defaultValue>
        <label>常规片总关注客户</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PermitNumber__c</fullName>
        <label>许可证号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PharmaceuticalCustomers__c</fullName>
        <label>医药客户</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerAttorney__c</fullName>
        <label>签署合同的授权委托书</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <label>产品线</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposedSpecies__c</fullName>
        <label>拟供品种</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QualityManager__c</fullName>
        <label>质量负责人</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefractionOpportunity__c</fullName>
        <label>屈光销售机会区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefractiveOpportunity__c</fullName>
        <formula>IF(RefractionOpportunity__c=&quot;有屈光销售机会&quot;, &quot;有屈光销售机会&quot;, &quot;无屈光销售机会&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>有无屈光销售机会</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegisteredAddress__c</fullName>
        <label>注册地址</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegisteredFund__c</fullName>
        <label>注册资金（万元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RegistrationCertificate__c</fullName>
        <label>医疗器械经营许可证或者备案凭证（二类）</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RegularOpportunities__c</fullName>
        <label>常规销售机会区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedCompany__c</fullName>
        <label>关联公司</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHWIND__c</fullName>
        <formula>IF(ExcimerOpportunity__c=&quot;有准分子销售机会&quot;, &quot;有准分子销售机会&quot;, &quot;无准分子销售机会&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>有无准分子销售机会</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesActivityDivision__c</fullName>
        <label>销售活动区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesActivity__c</fullName>
        <formula>IF(SalesActivityDivision__c=&quot;有销售活动&quot;, &quot;有销售活动&quot;, &quot;无销售活动&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>有无销售活动</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOpportunityDifferentiation__c</fullName>
        <label>欧堡销售机会区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesVolume__c</fullName>
        <label>眼科年营业额（万元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second__c</fullName>
        <formula>Owner.SecondarySector__c</formula>
        <label>客户所有人二级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SickBedSum__c</fullName>
        <label>眼科病床数（台）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StateHospital__c</fullName>
        <label>客户状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>潜客</fullName>
                    <default>true</default>
                    <label>潜客</label>
                </value>
                <value>
                    <fullName>客户</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SyncLog__c</fullName>
        <label>同步日志</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TestNumber__c</fullName>
        <label>TestNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>测试</label>
        <length>2500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TheFirstProduct__c</fullName>
        <label>产品是否首营</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TreatmentMeans__c</fullName>
        <label>治疗手段</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeEnterprise__c</fullName>
        <label>客户类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>生产单位</fullName>
                </value>
                <value>
                    <fullName>经营单位</fullName>
                </value>
                <value>
                    <fullName>医疗机构</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                    <isActive>false</isActive>
                    <label>其他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsedName__c</fullName>
        <label>曾用名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UstomerOwner__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>客户所有人简档</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIPAccount__c</fullName>
        <label>VIP客户</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <label>VIP客户认领</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueCustomer__c</fullName>
        <label>TOP40</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XSgz__c</fullName>
        <defaultValue>false</defaultValue>
        <label>常规销售经理关注客户</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YearsSince__c</fullName>
        <label>年手术量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZCgz__c</fullName>
        <defaultValue>false</defaultValue>
        <label>总裁关注客户</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <label>地址</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>代理商</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>客户</relationshipLabel>
        <relationshipName>obQn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>area__c</fullName>
        <label>区域</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>市/区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>province__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>东城区</fullName>
                </value>
                <value>
                    <fullName>西城区</fullName>
                </value>
                <value>
                    <fullName>朝阳区</fullName>
                </value>
                <value>
                    <fullName>丰台区</fullName>
                </value>
                <value>
                    <fullName>石景山区</fullName>
                </value>
                <value>
                    <fullName>海淀区</fullName>
                </value>
                <value>
                    <fullName>门头沟区</fullName>
                </value>
                <value>
                    <fullName>房山区</fullName>
                </value>
                <value>
                    <fullName>通州区</fullName>
                </value>
                <value>
                    <fullName>顺义区</fullName>
                </value>
                <value>
                    <fullName>昌平区</fullName>
                </value>
                <value>
                    <fullName>大兴区</fullName>
                </value>
                <value>
                    <fullName>怀柔区</fullName>
                </value>
                <value>
                    <fullName>平谷区</fullName>
                </value>
                <value>
                    <fullName>密云县</fullName>
                </value>
                <value>
                    <fullName>延庆县</fullName>
                </value>
                <value>
                    <fullName>和平区</fullName>
                </value>
                <value>
                    <fullName>河东区</fullName>
                </value>
                <value>
                    <fullName>河西区</fullName>
                </value>
                <value>
                    <fullName>南开区</fullName>
                </value>
                <value>
                    <fullName>河北区</fullName>
                </value>
                <value>
                    <fullName>红桥区</fullName>
                </value>
                <value>
                    <fullName>塘沽区</fullName>
                </value>
                <value>
                    <fullName>汉沽区</fullName>
                </value>
                <value>
                    <fullName>大港区</fullName>
                </value>
                <value>
                    <fullName>东丽区</fullName>
                </value>
                <value>
                    <fullName>西青区</fullName>
                </value>
                <value>
                    <fullName>津南区</fullName>
                </value>
                <value>
                    <fullName>北辰区</fullName>
                </value>
                <value>
                    <fullName>武清区</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>clientlevel__c</fullName>
        <label>客户级别</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>公司VIP</fullName>
                </value>
                <value>
                    <fullName>部门VIP</fullName>
                </value>
                <value>
                    <fullName>普通客户</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>firmprice__c</fullName>
        <label>耗材约定价格</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>firstclassify__c</fullName>
        <label>客户一级分类</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>公立医院</fullName>
                </value>
                <value>
                    <fullName>集团民营</fullName>
                </value>
                <value>
                    <fullName>单体民营</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>level__c</fullName>
        <label>医院等级</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>三甲</fullName>
                </value>
                <value>
                    <fullName>三乙</fullName>
                </value>
                <value>
                    <fullName>二甲</fullName>
                </value>
                <value>
                    <fullName>二乙</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>postcode__c</fullName>
        <label>邮编</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>